fix form-group-lg label vertical align

--- a/less/forms.less
+++ b/less/forms.less
@@ -575,7 +575,7 @@ input[type="checkbox"] {
   .form-group-lg {
     @media (min-width: @screen-sm-min) {
       .control-label {
-        padding-top: ((@padding-large-vertical * @line-height-large) + 1);
+        padding-top: ((@padding-large-vertical * @line-height-large) - 1);
       }
     }
   }
